# mcp-jive

./: .dockerignore  .env.dev  .env.dev.backup.20250801_224240  .env.dev.backup.20250801_231103  .env.example  .env.lancedb  .gitignore  AGENT-JIVE-INSTRUCTIONS.md  CHANGELOG.md  CLAUDE.md  CONSOLIDATED_TOOLS_COMPREHENSIVE_TEST_PLAN.md  CONSOLIDATION_PLAN.md  CONTRIBUTING.md  DISTRIBUTION.md  Dockerfile  FINAL_CONSOLIDATION_CLEANUP.md  FINAL_TOOL_AUDIT_SUMMARY.md  JIVE_PREFIX_IMPLEMENTATION.md  LICENSE  MCP_JIVE_COMPREHENSIVE_TEST.md  README.md  TASK_STORAGE_SYNC_IMPLEMENTATION.md  TOOL_IMPLEMENTATION_ISSUES_ANALYSIS.md  TOOL_MODE_IMPLEMENTATION.md  VECTORIZER_IMPLEMENTATION.md  WORK_ITEM_ISSUES_FIX.md  analyze_databases.py  check_both_databases.py  check_both_dbs.py  check_database_data.py  check_table_schema.py  check_weaviate_database.py  check_work_items.py  cleanup_env_variables.py  compare_databases.py  comprehensive_audit_results.json  comprehensive_mcp_tool_test_suite.md  consolidate_imports.py  copy_missing_components.py  debug_actual_database.py  (+112 more)
docs/: AI_AGENT_PARAMETER_OPTIMIZATION_ADDENDUM.md  AI_EXECUTION_GUIDANCE_TRANSFORMATION_PLAN.md  AI_FUNCTIONALITY_ANALYSIS.md  COMPREHENSIVE_MCP_SERVER_TEST_PLAN.md  COMPREHENSIVE_MCP_TOOLS_REFERENCE.md  COMPREHENSIVE_VALIDATION_ANALYSIS.md  CONSOLIDATED_TOOLS_IMPLEMENTATION_GUIDE.md  CONSOLIDATED_TOOLS_USAGE_GUIDE.md  MCPTools.md  MCP_SERVER_TEST_ANALYSIS_AND_FIXES.md  MCP_TOOL_CONSOLIDATION_PROPOSAL.md  MCP_TOOL_METADATA_ANALYSIS.md  MEMORY_MARKDOWN_FORMAT_SPEC.md  QUICK_TOOLS_REFERENCE.md  README.md  RELEASE_PROCESS.md  TOOL_CONSOLIDATION_SUMMARY.md  TOOL_METADATA_IMPROVEMENT_PLAN.md  URL_NAMESPACE_IMPLEMENTATION.md  mcp-namespace-binding.md  test-results-analysis.md
frontend/: .prettierignore  eslint.config.mjs  next.config.js  next.config.ts  package-lock.json  package.json
scripts/: README.md  add_jive_prefixes.py  audit_tools.py  build_package.py  complete_weaviate_removal.py  debug_fts.py  debug_fts_detailed.py  debug_test_scenario.py  detailed_audit_tools.py  dev-server.py  dev.py  e2e-test.sh  fix_autonomous_executor.py  fix_critical_tool_issues.py  fix_dependency_engine.py  fix_double_jive_prefixes.py  fix_hierarchy_manager.py  fix_remaining_get_client_calls.py  mcp-stdio-server.py  migrate_to_consolidated_tools.py  migrate_weaviate_to_lancedb.py  phase1_database_fixes.py  phase2_uuid_fixes.py  phase3_error_handling_fixes.py  run_e2e_tests.py  setup-dev.py  setup_lancedb.py  test-release.sh  test_lancedb_migration.py  validate_lancedb_migration.py
src/: main.py
test_results/: integration_test_bug_fixes_integration.xml  (+3 more)
tests/: conftest.py  (+9 more)
(+370 files in other folders)
